--- a/components/moviePreview/style.module.css
+++ b/components/moviePreview/style.module.css
@@ -2,11 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 650px;
+    width: 400px;
     height: 500px;
     box-sizing: border-box;
     text-align: center;
-    border: 1px solid #666;
     padding: 10px 4px;
     border-radius: 4px;
     cursor: pointer;
@@ -23,10 +22,21 @@
   }
   
   .preview img {
+    width: 200px;
+    height: 300px;
     transition: 500ms ease;
-    box-shadow: 4px 4px 8px #666;
     transform: rotateY(10deg);
     margin-bottom: 5px;
+  }
+
+  .preview:hover {
+    color: var(--primary);
+    border-color: var(--primary);
+    text-decoration: underline;
+  }
+  
+  .preview:hover img {
+    transform: translateY(-10px);
   }
 
   .list {
