--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -29,7 +28,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #0051f3;
   text-decoration: none;
 }
 
@@ -43,6 +42,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: "Nave";
 }
 
 .title,
@@ -51,18 +51,12 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 3rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-size: 1.2rem;
+  font-family: "Azo-Sans-Web";
+  font-weight: 400;
+  font-style: italic;
 }
 
 .grid {
@@ -72,23 +66,11 @@
   max-width: 800px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
-}
-
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid #0E0E7A;
+  border: 2px solid #d0e0ff;
   border-radius: 10px;
   padding: 30px;
   margin: 40px;
@@ -108,8 +90,8 @@
 .form > button {
   cursor: pointer;
   transition: 0.15s ease;
-  color: #000000;
-  background-color: #214cd9;
+  color: #d0e0ff;
+  background-color: #0051f3;
   border-radius: 10px;
   font-family: "azo-sans-web";
   font-weight: 300;
@@ -118,17 +100,28 @@
 }
 
 .form>button:is(:hover, :focus, :active) {
-  color: #000000;
-  background-color: #7a99ff;
+  color: #d0e0ff;
+  background-color: #002c85;
+}
+
+.card {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: #d0e0ff;
+  background-color: #0051f3;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: color 0.15s ease;
+  max-width: 350px;
 }
 
 .card:is(:hover, :focus, :active) {
-  color: #0070f3;
-  border-color: #0070f3;
+  background-color: #002c85;
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
+  margin: 0;
   font-size: 1.5rem;
 }
 
@@ -141,37 +134,6 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
-}
-
-.preview {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 650px;
-  height: 500px;
-  box-sizing: border-box;
-  text-align: center;
-  border: 1px solid #666;
-  padding: 10px 4px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: color 200ms;
-  color: var(--text);
-  box-sizing: border-box;
-  perspective: 800px;
-}
-
-.preview p {
-  text-decoration: none;
-  padding: 0;
-  margin: 0;
-}
-
-.preview img {
-  transition: 500ms ease;
-  box-shadow: 4px 4px 8px #666;
-  transform: rotateY(10deg);
-  margin-bottom: 5px;
 }
 
 .list {
